--- a/code/heater-bone.dts
+++ b/code/heater-bone.dts
@@ -71,9 +71,9 @@
         fragment@0 {
                 target = <&am33xx_pinmux>;
                 __overlay__ {
-                        /* configure UART5 */
-                        uart5_pins: pinmux_uart5_pins {
+                        gpio_helper_pins: pinmux_gpio_helper_pins {
                                 pinctrl-single,pins = <
+					/* configure UART5 */
                                         0xc4 0x24  /* lcd_data9.uart4_rxd | MODE4 */
                                         0xc0 0x04  /* lcd_data9.uart4_txd | MODE4 */
                                 >;
@@ -81,20 +81,11 @@
                 };
         };
 
-        fragment@1 {
-                target = <&uart6>; /* really uart5 */
-                __overlay__ {
-                        status = "okay";
-                        pinctrl-names = "default";
-                        pinctrl-0 = <&uart5_pins>;
-                };
-        };
-
         fragment@2 {
                 target = <&i2c2>;
                 __overlay__ {
                         status = "okay";
-                        pca: pca@41 {
+                        pwm: pca@41 {
                              compatible = "nxp,pca9685-pwm";
                              #pwm-cells = <2>;
                              reg = <0x41>;
