--- a/code/heater-bone.dts
+++ b/code/heater-bone.dts
@@ -18,27 +18,28 @@
         /* state the resources this cape uses */
         exclusive-use =
                 /* the pin header uses */
-                "P8.3",  /* BTN4:      GPIO1.6    */
-                "P8.4",  /* BTN3:      GPIO1.7    */
-                "P8.5",  /* BTN2:      GPIO1.2    */
-                "P8.6",  /* BTN1:      GPIO1.3    */
+                "P8.7",  /* BTN4:      GPIO2.2    */
+                "P8.8",  /* BTN3:      GPIO2.3    */
+                "P8.9",  /* BTN2:      GPIO2.5    */
+                "P8.10", /* BTN1:      GPIO2.4    */
 
+                "P8.11", /* HEATER_EN_SS: GPIO1.13   */
                 "P8.12", /* HEATER_EN: GPIO1.12   */
 
-                "P8.15", /* ENC_SW:    GPIO1.15   */
-                "P8.16", /* ENC_A:     GPIO1.14   */
-                "P8.17", /* ENC_B:     GPIO0.27   */
+                "P8.13", /* ENC_SW:    GPIO0.23   */
+                "P8.14", /* ENC_B:     GPIO0.26   */
+                "P8.15", /* ENC_A:     GPIO1.15   */
 
-                "P8.21", /* LCD_D6:    GPIO1.30   */
-                "P8.22", /* LCD_D7:    GPIO1.5    */
-                "P8.23", /* LCD_D4:    GPIO1.4    */
-                "P8.24", /* LCD_D5:    GPIO1.1    */
-                "P8.25", /* LCD_D2:    GPIO1.0    */
+                "P8.16", /* LCD_D7:    GPIO1.14   */
+                "P8.17", /* LCD_D5:    GPIO0.27   */
+                "P8.18", /* LCD_D6:    GPIO2.1    */
+                "P8.19", /* LCD_D4:    GPIO0.22   */
                 "P8.26", /* LCD_D3:    GPIO1.29   */
-                "P8.27", /* LCD_D0:    GPIO2.22   */
-                "P8.28", /* LCD_D1:    GPIO2.24   */
-                "P8.29", /* LCD_RS:    GPIO2.23   */
-                "P8.30", /* LCD_E:     GPIO2.25   */
+                "P8.27", /* LCD_D1:    GPIO2.22   */
+                "P8.28", /* LCD_D2:    GPIO2.24   */
+                "P8.29", /* LCD_E:     GPIO2.23   */
+                "P8.30", /* LCD_D0:    GPIO2.25   */
+                "P8.34", /* LCD_RS:    GPIO2.17   */
 
                 "P8.31", /* XBEE_CTSn: UART5_CTSn */
                 "P8.32", /* XBEE_RTSn: UART5_RTSn */
