--- a/code/heater-bone.dts
+++ b/code/heater-bone.dts
@@ -35,19 +35,19 @@
                 "P8.18", /* LCD_D6:    GPIO2.1    */
                 "P8.19", /* LCD_D4:    GPIO0.22   */
                 "P8.26", /* LCD_D3:    GPIO1.29   */
-                "P8.27", /* LCD_D1:    GPIO2.22   */
-                "P8.28", /* LCD_D2:    GPIO2.24   */
-                "P8.29", /* LCD_E:     GPIO2.23   */
-                "P8.30", /* LCD_D0:    GPIO2.25   */
-                "P8.34", /* LCD_RS:    GPIO2.17   */
+                // "P8.27", /* LCD_D1:    GPIO2.22   */
+                // "P8.28", /* LCD_D2:    GPIO2.24   */
+                // "P8.29", /* LCD_E:     GPIO2.23   */
+                // "P8.30", /* LCD_D0:    GPIO2.25   */
+                // "P8.34", /* LCD_RS:    GPIO2.17   */
 
-                "P8.31", /* XBEE_CTSn: UART5_CTSn */
-                "P8.32", /* XBEE_RTSn: UART5_RTSn */
-                "P8.37", /* XBEE_TxD:  UART5_TxD  */
-                "P8.38", /* XBEE_RxD:  UART5_RxD  */
-                "P8.39", /* XBEE_RESETn: GPIO2.12 */
-                "P8.40", /* XBEE_SLEEP:  GPIO2.13 */
-                "P8.42", /* XBEE_PWR:  GPIO2.11   */
+                // "P8.31", /* XBEE_CTSn: UART5_CTSn */
+                // "P8.32", /* XBEE_RTSn: UART5_RTSn */
+                // "P8.37", /* XBEE_TxD:  UART5_TxD  */
+                // "P8.38", /* XBEE_RxD:  UART5_RxD  */
+                // "P8.39", /* XBEE_RESETn: GPIO2.12 */
+                // "P8.40", /* XBEE_SLEEP:  GPIO2.13 */
+                // "P8.42", /* XBEE_PWR:  GPIO2.11   */
 
                 "P9.15", /* LEDS_ENn:  GPIO1.16   */
 
@@ -55,15 +55,15 @@
                 "P9.20", /* SDA:       I2C2_SDA   */
 
                 "P9.23", /* ADC_INT:   GPIO1.17   */
-                "P9.28", /* ADC_CSn:   SPI1_CS0   */
+                // "P9.28", /* ADC_CSn:   SPI1_CS0   */
 
                 "P9.42", /* NRF_CSn:   SPI1_CS1   */
                 "P9.26", /* NRF_CE:    GPIO?      */
                 "P9.27", /* NRF_IRQ:   GPIO3.19   */
 
-                "P9.29", /* SPI1_MOSI: SPI1_D0    */
+                //"P9.29", /* SPI1_MOSI: SPI1_D0    */
                 "P9.30", /* SPI1_MISO: SPI1_D1    */
-                "P9.31", /* SPI1_SCLK: SPI1_SCLK  */
+                //"P9.31", /* SPI1_SCLK: SPI1_SCLK  */
 
                 /* the hardware IP uses */
                 "uart5",
