--- a/code/heater-bone.dts
+++ b/code/heater-bone.dts
@@ -87,32 +87,47 @@
                 __overlay__ {
                         status = "okay";
                         pwm: pca@41 {
-                             compatible = "nxp,pca9685-pwm";
-                             #pwm-cells = <2>;
-                             reg = <0x41>;
-                             invert;
-                             open-drain;
+                            compatible = "nxp,pca9685-pwm";
+                            #pwm-cells = <2>;
+                            reg = <0x41>;
+                            invert;
+                            open-drain;
+                        };
+
+			pwmleds@1 {
+			    compatible = "pwm-leds";
+
+			    lcd_backlight {
+				label = "lcd:backlight";
+			        pwms = <&pwm 0 5000000>;
+			    };
+                            red {
+                                label = "rgb:red";
+			        pwms = <&pwm 14 5000000>;
+                            };
+			    green {
+                                label = "rgb:green";
+                                pwms = <&pwm 13 5000000>;
+                            };
+			    blue {
+                                label = "rgb:blue";
+                                pwms = <&pwm 12 5000000>;
+                            };
+
+			    led1  {pwms = <&pwm 10 5000000>;};
+			    led2  {pwms = <&pwm 11 5000000>;};
+			    led3  {pwms = <&pwm 4  5000000>;};
+			    led4  {pwms = <&pwm 5  5000000>;};
+			    led5  {pwms = <&pwm 8  5000000>;};
+			    led6  {pwms = <&pwm 9  5000000>;};
+			    led7  {pwms = <&pwm 6  5000000>;};
+			    led8  {pwms = <&pwm 7  5000000>;};
+			    led9  {pwms = <&pwm 0  5000000>;};
+			    led10 {pwms = <&pwm 1  5000000>;};
+			    led11 {pwms = <&pwm 2  5000000>;};
+			    led12 {pwms = <&pwm 3  5000000>;};
                         };
                 };
-
-                lcd_backlight {pwms = <&pwm 0 5000000>;};
-
-                red_led       {pwms = <&pwm 14 5000000>;};
-                green_led     {pwms = <&pwm 13 5000000>;};
-                blue_led      {pwms = <&pwm 12 5000000>;};
-
-                led1          {pwms = <&pwm 10 5000000>;};
-                led2          {pwms = <&pwm 11 5000000>;};
-                led3          {pwms = <&pwm 4  5000000>;};
-                led4          {pwms = <&pwm 5  5000000>;};
-                led5          {pwms = <&pwm 8  5000000>;};
-                led6          {pwms = <&pwm 9  5000000>;};
-                led7          {pwms = <&pwm 6  5000000>;};
-                led8          {pwms = <&pwm 7  5000000>;};
-                led9          {pwms = <&pwm 0  5000000>;};
-                led10         {pwms = <&pwm 1  5000000>;};
-                led11         {pwms = <&pwm 2  5000000>;};
-                led12         {pwms = <&pwm 3  5000000>;};
         };
 
         fragment@3 {
@@ -153,13 +168,13 @@
                                         linux,code = <104>;
                                         gpios = <&gpio2 15 0x00>;
                                 };
+                        };
 
-                                rotary@0 {
-                                        compatible = "rotary-encoder";
-                                        gpios = <&gpio2 14 0>, <&gpio1 27 0>; 
-                                        linux,axis = <0>; /* REL_X */
-                                        rotary-encoder,relative-axis;
-                                };
+                        rotary@0 {
+                                compatible = "rotary-encoder";
+                                gpios = <&gpio2 14 0>, <&gpio1 27 0>; 
+                                linux,axis = <0>; /* REL_X */
+                                rotary-encoder,relative-axis;
                         };
                 };
         };
