--- a/code/heater-bone.dts
+++ b/code/heater-bone.dts
@@ -174,84 +174,89 @@
                         pwmleds {
                             compatible = "pwm-leds";
 
+                            // The period_ns values accepted by the PCA9685
+                            // driver are a lie. The driver simply determines
+                            // the desired on-time by,
+                            //
+                            //     duty = 4096 * duty_ns / period_ns
                             lcd_backlight {
-                                pwms = <&pwm 15 16000000>;
+                                pwms = <&pwm 15 4096>;
                                 label = "heater:white:lcd";
                                 max-brightness = <4095>;
                             };
                             red {
-                                pwms = <&pwm 14 16000000>;
+                                pwms = <&pwm 14 4096>;
                                 label = "heater:status:red";
                                 max-brightness = <4095>;
                             };
                             green {
-                                pwms = <&pwm 13 16000000>;
+                                pwms = <&pwm 13 4096>;
                                 label = "heater:status:green";
                                 max-brightness = <4095>;
                             };
                             blue {
-                                pwms = <&pwm 12 16000000>;
+                                pwms = <&pwm 12 4096>;
                                 label = "heater:status:blue";
                                 max-brightness = <4095>;
                             };
 
                             led1  {
-                                pwms = <&pwm 10 16000000>;
+                                pwms = <&pwm 10 4096>;
                                 label = "heater:led1:green";
                                 max-brightness = <4095>;
                             };
                             led2  {
-                                pwms = <&pwm 11 16000000>;
+                                pwms = <&pwm 11 4096>;
                                 label = "heater:led1:red";
                                 max-brightness = <4095>;
                             };
                             led3  {
-                                pwms = <&pwm 4  16000000>;
+                                pwms = <&pwm 4  4096>;
                                 label = "heater:led2:green";
                                 max-brightness = <4095>;
                             };
                             led4  {
-                                pwms = <&pwm 5  16000000>;
+                                pwms = <&pwm 5  4096>;
                                 label = "heater:led2:red";
                                 max-brightness = <4095>;
                             };
                             led5  {
-                                pwms = <&pwm 8  16000000>;
+                                pwms = <&pwm 8  4096>;
                                 label = "heater:led3:green";
                                 max-brightness = <4095>;
                             };
                             led6  {
-                                pwms = <&pwm 9  16000000>;
+                                pwms = <&pwm 9  4096>;
                                 label = "heater:led3:red";
                                 max-brightness = <4095>;
                             };
                             led7  {
-                                pwms = <&pwm 6  16000000>;
+                                pwms = <&pwm 6  4096>;
                                 label = "heater:led4:green";
                                 max-brightness = <4095>;
                             };
                             led8  {
-                                pwms = <&pwm 7  16000000>;
+                                pwms = <&pwm 7  4096>;
                                 label = "heater:led4:red";
                                 max-brightness = <4095>;
                             };
                             led9  {
-                                pwms = <&pwm 0  16000000>;
+                                pwms = <&pwm 0  4096>;
                                 label = "heater:encoder:red";
                                 max-brightness = <4095>;
                             };
                             led10 {
-                                pwms = <&pwm 1  16000000>;
+                                pwms = <&pwm 1  4096>;
                                 label = "heater:encoder:green";
                                 max-brightness = <4095>;
                             };
                             led11 {
-                                pwms = <&pwm 2  16000000>;
+                                pwms = <&pwm 2  4096>;
                                 label = "heater:encoder:blue";
                                 max-brightness = <4095>;
                             };
                             led12 {
-                                pwms = <&pwm 3  16000000>;
+                                pwms = <&pwm 3  4096>;
                                 label = "heater:led12:red";
                                 max-brightness = <4095>;
                             };
