dt: Add #address-cells and #size-cells

--- a/code/heater-bone.dts
+++ b/code/heater-bone.dts
@@ -147,6 +147,8 @@
         fragment@1 {
                 target = <&i2c2>;
                 __overlay__ {
+ 			#address-cells = <1>;
+                        #size-cells = <0>;
                         status = "okay";
 
                         pwm: pca@40 {
